# garveyclaw-py

./: .env  .env.example  .gitignore  COURSE_GUIDE.md  MEMORY.md  README.md  claw_course_bot.py  pyproject.toml
data/: course_session.json  course_tasks.db  garveyclaw_session.json  garveyclaw_tasks.db
docs/: bash-tool-cross-platform-spec.md  multi-agent-spec.md  tool-system-architecture.md
hiclaw/: __init__.py  __main__.py
models/asr/: README.md
pixel-office-core/: README.md  weclaw-dashboard.html  weclaw-dashboard.js
pixel-office-core/src/: browserAssetLoader.ts  officeState.ts
scripts/: check_text_encoding.py  dev-core-dashboard.ps1  install-wrappers.ps1  install-wrappers.sh  install.ps1  install.sh  restart.sh  start.sh  stop.sh  uninstall.ps1  uninstall.sh
site/: index.html  styles.css
src/garveyclaw/: __init__.py  __main__.py  access.py  agent_client.py  agent_tools.py  app.py  claude_client.py  config.py  media_store.py  memory_store.py  openai_client.py  scheduler.py  scheduler_store.py  session_store.py  telegram_bot.py  tui.py
src/hiclaw/: app.py  cli.py  config.py  setup.py
src/hiclaw/agents/: claude.py  openai.py
src/hiclaw/capabilities/: tools.py
src/hiclaw/channels/: tui.py
src/hiclaw/core/: model_profiles.py  provider_model.py  provider_state.py
src/hiclaw/decision/: interpreter.py
src/weclaw/: __init__.py  __main__.py  app.py  cli.py  config.py  setup.py
src/weclaw/agents/: claude.py  openai.py  openai_stream.py  openai_tools.py  prompts.py  router.py  runtime.py  tools.py
src/weclaw/agentspec/: registry.py  runtime.py  store.py
src/weclaw/capabilities/: catalog.py  runtime.py  tools.py  workflows.py
src/weclaw/channels/: registry.py  tui.py
src/weclaw/cluster/: coordinator.py  orchestrator.py  store.py
src/weclaw/core/: agent_activity.py  delivery.py  interactive.py  model_discovery.py  model_manager.py  model_profiles.py  model_selector.py  provider_model.py  provider_state.py
src/weclaw/decision/: candidates.py  interpreter.py  models.py  render.py  router.py  store.py  workflow_gate.py
src/weclaw/media/: speech.py  store.py
tests/: test_public_beta_regressions.py  test_task_natural_schedule.py  test_tool_auto_approval.py
weclaw/: __init__.py  __main__.py
workspace/memory/: CLAUDE.md
workspace_course/: demo.txt
workspace_course/memory_course/: CLAUDE.md
(+45 files in other folders)
