[project]

name = "weclaw"

version = "0.1.0"

description = "Personal AI Agent with Claude Code SDK and Telegram"

requires-python = ">=3.12"

dependencies = [

    "aiosqlite>=0.22.1",

    "apscheduler>=3.10,<4.0",

    "claude-agent-sdk>=0.1.31",

    "croniter>=6.0.0",

    "lark-oapi>=1.4.0",

    "openai>=2.0.0",

    "prompt-toolkit>=3.0.52",

    "python-dotenv>=1.2.1",

    "python-telegram-bot>=22.6",

]


[project.optional-dependencies]

asr = [

    "vosk>=0.3.45",

]



[project.scripts]
weclaw = "weclaw.cli:main"
weclaw-tui = "weclaw.channels.tui:main"
weclaw-feishu = "weclaw.channels.feishu.bot:main"
weclaw-dashboard = "weclaw.monitor.server:main"


[build-system]

requires = ["hatchling"]

build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]

packages = [

    "src/weclaw",
    "src/weclaw/agentspec",
    "src/weclaw/agents",
    "src/weclaw/capabilities",

    "src/weclaw/channels",

    "src/weclaw/channels/telegram",

    "src/weclaw/channels/feishu",

    "src/weclaw/cluster",
    "src/weclaw/core",

    "src/weclaw/decision",

    "src/weclaw/media",

    "src/weclaw/memory",

    "src/weclaw/monitor",

    "src/weclaw/skills",

    "src/weclaw/tasks",

]



[tool.ruff]

line-length = 180
