[project]

name = "weclaw"

version = "0.1.0"

description = "Personal AI Agent with Claude Code SDK and Telegram"

requires-python = ">=3.12"

dependencies = [

    "aiohttp>=3.9.0",

    "aiosqlite>=0.22.1",

    "apscheduler>=3.10,<4.0",

    "claude-agent-sdk>=0.1.31",

    "cryptography>=42.0.0",

    "croniter>=6.0.0",

    "lark-oapi>=1.4.0",

    "openai>=2.0.0",

    "prompt-toolkit>=3.0.52",

    "python-dotenv>=1.2.1",

    "python-telegram-bot>=22.6",

    "qrcode>=8.0",

    "vosk>=0.3.45",

]


[project.optional-dependencies]

asr = [

]



[project.scripts]
weclaw = "weclaw.cli:main"
weclaw-tui = "weclaw.channels.tui:main"
weclaw-feishu = "weclaw.channels.feishu.bot:main"
weclaw-weixin = "weclaw.channels.weixin.bot:main"
weclaw-dashboard = "weclaw.monitor.server:main"


[build-system]

requires = ["hatchling"]

build-backend = "hatchling.build"



[tool.hatch.build.targets.wheel]

packages = [

    "src/weclaw",

]



[tool.ruff]

line-length = 180
